--- a/.github/workflows/test-maven.yml
+++ b/.github/workflows/test-maven.yml
@@ -3,16 +3,19 @@ name: CI
 on: [push]
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
+  setup:
+    name: Setup Environment
     steps:
     - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
+    - uses: actions/setup-java@v1 
       with:
         java-version: '8.0.212'
-    - name: Run Maven Tests
-      run: ./mvnw clean verify
+  test:
+    name: Test build on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    needs: setup
     strategy:
       matrix:
         os: [ubuntu-18.04, windows-2019, macOS-10.14]
-        
+    - name: Run Maven Tests
+      run: ./mvnw clean verify
