--- a/.github/workflows/test-maven.yml
+++ b/.github/workflows/test-maven.yml
@@ -17,5 +17,6 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-18.04, windows-2019, macOS-10.14]
+    steps:
     - name: Run Maven Tests
       run: ./mvnw clean verify
