--- a/.github/workflows/test-maven.yml
+++ b/.github/workflows/test-maven.yml
@@ -23,10 +23,10 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install Graal VM
       run: | 
-        choco install graalvm --version 19.1.0
+        choco install graalvm --version 19.1.0 maven --version 3.6.1
         SET JAVA_HOME=C:\Program Files\GraalVM\graalvm-ce-19.1.0\jre
         SET GRAAL_BIN=C:\Program Files\GraalVM\graalvm-ce-19.1.0\bin
         SET PATH=%GRAAL_BIN%;%PATH%
     - name: Build Jar
-      run: ./scripts/compile-maven.sh
+      run: mvn clean package
       
