--- a/.github/workflows/test-maven.yml
+++ b/.github/workflows/test-maven.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Install Graal VM
-      run |
+      run: |
         curl -L https://github.com/oracle/graal/releases/download/vm-19.0.0/graalvm-ce-darwin-amd64-19.0.0.tar.gz --output graal.tar.gz
         gunzip -c graal.tar.gz | tar xopf -
         export PATH=${PWD}/graalvm-ce-19.0.0/Contents/Home/bin:$PATH
