--- a/.github/workflows/test-maven.yml
+++ b/.github/workflows/test-maven.yml
@@ -28,10 +28,11 @@ jobs:
         export PATH=${PWD}/graalvm-ce-19.0.0/Contents/Home/bin:$PATH
         export JAVA_HOME=${PWD}/graalvm-ce-19.0.0/Contents/Home/jre
         gu install native-image
-    - name: Build Jar
-      run: ./scripts/compile-maven.sh
-    - name: Compile Binary
-      run: ./scripts/build-osx.sh
+        gu list
+#    - name: Build Jar
+#      run: ./scripts/compile-maven.sh
+#    - name: Compile Binary
+#      run: ./scripts/build-osx.sh
 
     
     
