--- a/.github/workflows/test-maven.yml
+++ b/.github/workflows/test-maven.yml
@@ -33,7 +33,7 @@ jobs:
 #    - name: Build Jar
 #      run: ./scripts/compile-maven.sh
     - name: Compile Binary
-      run: ./scripts/build-osx.sh
+      run: bash ${PWD}/scripts/build-osx.sh 
 
     
     
