--- a/.github/workflows/test-maven.yml
+++ b/.github/workflows/test-maven.yml
@@ -43,12 +43,8 @@ jobs:
         export PATH=${PWD}/graalvm-ce-19.0.0/Contents/Home/bin:$PATH
         export JAVA_HOME=${PWD}/graalvm-ce-19.0.0/Contents/Home/jre
         gu install native-image
-        gu list
-        which native-image
-        echo $PATH
-        echo $0
-#    - name: Build Jar
-#      run: ./scripts/compile-maven.sh
+    - name: Build Jar
+      run: ./scripts/compile-maven.sh
     - name: Compile Binary
       run: |
         export PATH=${PWD}/graalvm-ce-19.0.0/Contents/Home/bin:$PATH
