--- a/.github/workflows/test-maven.yml
+++ b/.github/workflows/test-maven.yml
@@ -38,6 +38,7 @@ jobs:
       run: |
         curl -L https://github.com/oracle/graal/releases/download/vm-19.0.0/graalvm-ce-darwin-amd64-19.0.0.tar.gz --output graal.tar.gz
         gunzip -c graal.tar.gz | tar xopf -
+        export PATH=${PWD}/graalvm-ce-19.0.0/Contents/Home/bin:$PATH
         export JAVA_HOME=${PWD}/graalvm-ce-19.0.0/Contents/Home/jre
         gu install native-image
     - name: Build Jar
@@ -47,7 +48,7 @@ jobs:
         export PATH=${PWD}/graalvm-ce-19.0.0/Contents/Home/bin:$PATH
         export JAVA_HOME=${PWD}/graalvm-ce-19.0.0/Contents/Home/jre
         /bin/bash ${PWD}/scripts/build-osx.sh
-    
+
 #  build-windows:
 #    name: build windows
 #    runs-on: windows-2019
