--- a/.github/workflows/test-maven.yml
+++ b/.github/workflows/test-maven.yml
@@ -20,13 +20,15 @@ jobs:
       run: ./scripts/compile-maven.sh
     - name: Compile Binary
       run: ./scripts/build.sh ${{ matrix.os }}
-    - uses: actions/upload-artifact@master
+    - name: Upload ${{ matrix.os }} Binary
       if: ${{ matrix.os }} == 'macOS-10.14'
+      uses: actions/upload-artifact@master
       with:
         name: titan-cli-0.3.0-darwin_amd64.zip
         path: ${PWD}/releases/0.3.0
-    - uses: actions/upload-artifact@master
+    - name: Upload ${{ matrix.os }} Binary
       if: ${{ matrix.os }} == 'ubuntu-18.04'
+      uses: actions/upload-artifact@master
       with:
         name: titan-cli-0.3.0-linux_amd64.zip
         path: ${PWD}/releases/0.3.0
