--- a/.github/workflows/test-maven.yml
+++ b/.github/workflows/test-maven.yml
@@ -25,13 +25,13 @@ jobs:
       uses: actions/upload-artifact@master
       with:
         name: titan-cli-0.3.0-darwin_amd64.zip
-        path: ${PWD}/releases/0.3.0
+        path: releases/0.3.0
     - name: Upload ${{ matrix.os }} Binary
       if: matrix.os == 'ubuntu-18.04'
       uses: actions/upload-artifact@master
       with:
         name: titan-cli-0.3.0-linux_amd64.zip
-        path: ${PWD}/releases/0.3.0
+        path:releases/0.3.0
   check:
     name: Check Releases
     runs-on: ubuntu-18.04
@@ -40,11 +40,11 @@ jobs:
       - uses: actions/download-artifact@master
         with:
           name: titan-cli-0.3.0-darwin_amd64.zip
-          path: ${PWD}/releases/0.3.0
+          path: releases/0.3.0
       - uses: actions/download-artifact@master
         with:
           name: titan-cli-0.3.0-linux_amd64.zip
-          path: ${PWD}/releases/0.3.0
+          path: releases/0.3.0
       - run: cat ${PWD}/releases/0.3.0
 
 #  built-osx:
