--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,38 +3,45 @@ name: CI
 on: [push]
 
 jobs:
-  build:
-    name: Build ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-18.04, macOS-10.14]
-    steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
-      with:
-        java-version: '8.0.212'
-    - name: Setup Env
-      run: ./scripts/setup.sh ${{ matrix.os }}
-    - name: Build Jar
-      run: ./scripts/compile-maven.sh
-    - name: Compile Binary
-      run: ./scripts/build.sh ${{ matrix.os }}
-    - name: Upload ${{ matrix.os }} Binary
-      uses: actions/upload-artifact@master
-      with:
-        name: *
-        path: releases/0.3.0
+#  build:
+#    name: Build ${{ matrix.os }}
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      matrix:
+#        os: [ubuntu-18.04, macOS-10.14]
+#    steps:
+#    - uses: actions/checkout@v1
+#    - uses: actions/setup-java@v1
+#      with:
+#        java-version: '8.0.212'
+#    - name: Setup Env
+#      run: ./scripts/setup.sh ${{ matrix.os }}
+#    - name: Build Jar
+#      run: ./scripts/compile-maven.sh
+#    - name: Compile Binary
+#      run: ./scripts/build.sh ${{ matrix.os }}
+#    - name: Upload ${{ matrix.os }} Binary
+#      uses: actions/upload-artifact@master
+#      with:
+#        name: *
+#        path: releases/0.3.0
   release:
-    name: Release Build
+    name: Create Release From Tag
     runs-on: ubuntu-18.04
-    needs: build
     steps:
-      - uses: actions/download-artifact@master
-        with:
-          name: *
-          path: releases/0.3.0
-      - run: ls ${PWD}/releases/0.3.0
+      - name: Create Release
+        if: startsWith(github.ref, 'refs/tags/')
+        run: echo ${GITHUB_REF}
+#  release:
+#    name: Release Build
+#    runs-on: ubuntu-18.04
+#    needs: build
+#    steps:
+#      - uses: actions/download-artifact@master
+#        with:
+#          name: *
+#          path: releases/0.3.0
+#      - run: ls ${PWD}/releases/0.3.0
  #     - name: Release
  #       uses: softprops/action-gh-release@v1
  #       if: startsWith(github.ref, 'refs/tags/')
