env for secrets
Signed-off-by: Derek Smart <derek.smart@delphix.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,9 @@ jobs:
     steps:
       - name: Draft Release
         if: startsWith(github.ref, 'refs/tags/')
-        secrets: ["GITHUB_TOKEN"]
         run: ${PWD}/scripts/draft-release.sh ${GITHUB_REF}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 #  release:
 #    name: Release Build
 #    runs-on: ubuntu-18.04
