--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,6 @@
-name: CI
+name: Publish
 
-on: [push]
+on: create
 
 jobs:
   build:
@@ -19,6 +19,7 @@ jobs:
     - name: Build Jar
       run: ./scripts/compile-maven.sh
     - name: Compile Binary
+      if: startsWith(github.ref, 'refs/tags/')
       run: ./scripts/build.sh ${{ matrix.os }}
     - name: Upload ${{ matrix.os }} Binary
       if: matrix.os == 'macOS-10.14'
@@ -51,20 +52,3 @@ jobs:
       run: ./scripts/draft-release.sh
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-#  build-windows:
-#    name: build windows
-#    runs-on: windows-2019
-#    steps:
-#    - uses: actions/checkout@v1
-#    - name: Install Graal VM
-#      run: | 
-#        choco install graalvm --version 19.1.0 maven --version 3.6.1
-#        SET JAVA_HOME=C:\Program Files\GraalVM\graalvm-ce-19.1.0\jre
-#        SET GRAAL_BIN=C:\Program Files\GraalVM\graalvm-ce-19.1.0\bin
-#        SET PATH=%GRAAL_BIN%;%PATH%
-#    - name: Install Native Image
-#      run: gu install native-image
-#    - name: Build Jar
-#      run: mvn clean package
-      
