--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-18.04, windows-2019, macOS-10.14]
+        os: [ubuntu-18.04, windows-2019, macos-latest]
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
